--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,10 @@ pyworld = "^0.3.4"
 faiss-cpu = "^1.7.4"
 numpy = "^1.26.3"
 setuptools = "^69.0.3"
-pytest = "^7.4.4"
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.4"
+requests-mock = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core"]
