--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyworld = "^0.3.4"
 faiss-cpu = "^1.7.4"
 numpy = "^1.26.3"
 setuptools = "^69.0.3"
+edge-tts = "^6.1.10"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
