--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ faiss-cpu = "^1.7.4"
 numpy = "^1.26.3"
 setuptools = "^69.0.3"
 edge-tts = "^6.1.10"
+fastapi = "^0.110.0"
+uvicorn = "^0.27.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
