Better transformer optimization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aivoifu"
-version = "0.2.0"
+version = "0.2.1"
 description = "Easy and fast AI Waifu voice generation"
 authors = ["HRNPH <hrnph@protonmail.com>"]
 license = "MIT"
@@ -24,6 +24,7 @@ fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
 transformers = "^4.38.2"
 soundfile = "^0.12.1"
+optimum = "^1.17.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
