--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,14 @@ readme = "README.md"
 packages = [{include = "AIvoifu"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 gtts = "^2.5.0"
-librosa = "^0.10.1"
 torch = "^2.1.2"
 fairseq = "^0.12.2"
 wget = "^3.2"
 praat-parselmouth = "^0.4.3"
 pyworld = "^0.3.4"
 faiss-cpu = "^1.7.4"
-numpy = "^1.26.3"
 setuptools = "^69.0.3"
 edge-tts = "^6.1.10"
 fastapi = "^0.110.0"
@@ -25,6 +23,8 @@ uvicorn = "^0.27.1"
 transformers = "^4.38.2"
 soundfile = "^0.12.1"
 optimum = "^1.17.1"
+tts = "^0.22.0"
+nomkl = "^0.0.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
