--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aivoifu"
-version = "0.2.7"
+version = "0.2.8"
 description = "Easy and fast AI Waifu voice generation"
 authors = ["HRNPH <hrnph@protonmail.com>"]
 license = "MIT"
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "AIvoifu"}]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = "^3.10"
 gtts = "^2.5.0"
 torch = "^2.1.2"
 fairseq = "^0.12.2"
@@ -23,8 +23,10 @@ uvicorn = "^0.27.1"
 transformers = "^4.38.2"
 soundfile = "^0.12.1"
 optimum = "^1.17.1"
-tts = "^0.22.0"
 nomkl = "^0.0.3"
+deepspeed = "^0.14.2"
+scipy = "^1.13.0"
+librosa = "^0.10.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
